# Qwen2-1.5B-Fine-Tuning-Project

./: .gitignore  README.md  config.yml  pyproject.toml  test.jsonl  train.jsonl
COMMENTED_CODE/: README.md  chat.py.md  config.yml.md  evaluation.py.md  main.py.md  train_with_config.py.md
src/: chat.py  evaluation.py  main.py  train_with_config.py
